syntax = "proto3";

option go_package = "./producer/grpc/proto";

package proto;

service MyService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloResponse);
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloResponse);
  rpc SayHelloBidirectional (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}
